#204 FIX css text-wrap break-all in podcasterinnen card

--- a/src/components/PodcasterinnenCard/PodcasterinnenCard.css
+++ b/src/components/PodcasterinnenCard/PodcasterinnenCard.css
@@ -25,7 +25,7 @@
   line-height: 1.375em;
   text-align: center;
   text-transform: uppercase;
-  word-break: break-all;
+  word-break: break-word;
 
   margin: 10px 0 40px 0;
 }
